--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,77 +1,11 @@
-body {
-	margin: 0px;
-	background-color: #1873BA;
-	/*background-image: url(/web/20060820195542/http://www.qinfo.org/qip/images/body_background.jpg);*/
-	background-repeat: repeat-y;
-	background-position: center;
-
-
-
+/* 
+This is the first css file, there are 2 in total
+background color = #f0d7bb
+acent color = #211305
+text color = Snow/Tan
+*/
+head {
+	background-color:#f0d7bb;
+	font-family: Georgia, 'Times New Roman', Times, serif;
 	
-}
-td {
-	font-family: "Palatino Linotype", "Times New Roman", Times, serif;
-	font-size: small;
-	color: #003366;
-	font-weight: 600;
-
-	
-}
-h1 {
-	font-size: x-large;
-	font-weight: 900;
-	letter-spacing: 0.1em;
-	background-color: #000066;
-
-
-
-
-	
-}
-a {
-	color: #1272BD;
-	text-decoration: none;
-
-	
-}
-a:hover {
-	color: #3399FF;
-	text-decoration: underline;
-
-
-	
-}
-
-
-.menu {
-	color: #FFFFFF;
-
-	
-}
-.menu a {
-	background-color: #1873BA;
-	display: block;
-	color: #FFFFFF;
-	text-decoration: none;
-	border: none;
-
-
-
-
-	
-}
-.menu a:hover {
-	color: #33CC66;
-	text-decoration: none;
-
-	
-}
-
-h2 {
-	font-size: medium;
-}
-.institution {
-	color: #336699;
-	font-style: italic;
-
 }
